2004-11-12	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.1.10, depend on latest exo 0.1.3.
	* Terminal.desktop, icons/48x48/, icons/scalable/, terminal/main.c,
	  terminal/terminal-preferences-dialog.c, terminal/terminal-window.c:
	  Rename themable icons to avoid conflicts with other applications
	  and icon themes.
	* doc/C/: Documentation was updated for the new release. A section
	  about luit was added to the documentation.
	* m4/debug.m4: --enable-final is on by default for plattforms that
	  support it.
	* terminal/terminal-window.c: Added tooltips for Copy and Paste.
	* po/: Updated translations.

2004-11-11	Benedikt Meurer <benny@xfce.org>

	* terminal/stock-icon-showmenu24.png, terminal/stock-icons.h: Better
	  showmenu icon.

2004-11-11	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_init): Also reset the
	  Terminal size and update the geometry hints when the scrollbar
	  visibility is changed.
	* terminal/main.c, terminal/stock-icon-closetab16.png,
	  terminal/stock-icon-closetab24.png,
	  terminal/stock-icon-closewindow16.png,
	  terminal/stock-icon-closewindow24.png,
	  terminal/stock-icon-showborders24.png,
	  terminal/stock-icon-showmenu24.png,
	  terminal/stock-icon-reportbug24.png: Added a bunch of new
	  icons, thanks to Francois.
	* terminal/terminal-toolbars-model.c, terminal/terminal-window.c: Set
	  up the newly added stock icons. Added more actions to the toolbars.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* Terminal.spec.in: Keep up with latest changes.
	* Terminal.1: Added manual page.
	* doc/C/: Updated images in the documentation. Added FAQ entry
	  about how to customize the Terminal.ui file.
	* TODO: Added note to look at Gnome HIG to improve the
	  Preferences dialog.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_init): Also reset the
	  Terminal window size and update the geometry hints when the font
	  is changed.