@@ -1,3 +1,9 @@
+2004-11-14	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/Makefile.am, terminal/Makefile.in, HACKING: Do not
+	  regenerate the stock icon file and the enum-types file on the
+	  target systems.
+
 2004-11-12	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac, NEWS: Version 0.1.10, depend on latest exo 0.1.3.
